src/app/coins/components/coin-list/coin-list.component.scss
@import "../../../../styles/_variables.scss";

.spinner {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 50dvh;
}

.table-container {
  width: 100%;
  overflow-x: auto;
}

.coins {
  width: 100%;
  border-collapse: collapse;
  margin-top: 20px;

  thead {
    background-color: $color-light-grey;
  }

  th {
    padding: 12px;
    text-align: left;
  }

  th.coins--sort {
    cursor: pointer;
    min-width: 135px;
    transition: 0.2s;
    position: relative;

    &:hover {
      background-color: #e0e0e0;
    }

    span {
      position: absolute;
      top: 50%;
      right: 0;
      font-weight: 700;
      transform: translate(-12px, -50%);
    }
  }

  tbody {
    tr:hover {
      background-color: #f9f9f9;
      cursor: pointer;
    }
  }

  td {
    padding: 10px;
    border-bottom: 1px solid #ddd;
  }

  &--add {
    background-color: $color-blue;
    color: white;
    border: none;
    padding: 8px 16px;
    border-radius: 4px;
    cursor: pointer;

    &:hover {
      background-color: $color-dark-blue;
    }
  }
}

.pagination {
  display: flex;
  justify-content: space-between;
  margin-top: 20px;
  padding-bottom: 20px;
}

